--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ url: https://y7kim.github.io
 baseurl: '/cursos/'
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
+title: Cursos de Genometra
+email: cursos@genometra.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
 # Color settings (hex-codes without the leading hash-tag)
